# starnavi_test_assingment

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20210201_2109.py  0003_auto_20210201_2116.py  0004_like.py
posts/templates/posts/: feed.html
socialme/: asgi.py  settings.py  urls.py  wsgi.py
socialme/settings/: common.py  development.py  production.py
socialme/templates/: base.html  header.html  userbar.html
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_socialuser_avatar.py  0003_socialuser_facebook.py  0004_auto_20210131_1449.py  0005_auto_20210201_1032.py  0006_auto_20210203_1740.py  0007_auto_20210203_1753.py  0008_auto_20210204_1051.py
