[tool.poetry]
name = "socialme"
version = "0.1.0"
description = ""
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.5"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
