[tool.poetry]
name = "socialme"
version = "0.1.0"
description = ""
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.5"
djangorestframework = "^3.12.2"
python-dotenv = "^0.15.0"
rollbar = "^0.15.2"
django-cors-headers = "^3.7.0"
djangorestframework-simplejwt = "^4.6.0"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
